# InheritX

./: CODE_REVIEW_RESULTS.md  COLLATERAL_MANAGEMENT_DELIVERY.md  COLLATERAL_MANAGEMENT_IMPLEMENTATION.md  COLLATERAL_MANAGEMENT_INDEX.md  COLLATERAL_MANAGEMENT_QUICK_REFERENCE.md  COMPILATION_TEST_RESULTS.md  CONTINGENT_BENEFICIARIES_IMPLEMENTATION.md  CONTINGENT_BENEFICIARIES_QUICK_REFERENCE.md  CONTINGENT_BENEFICIARIES_SUMMARY.md  ENHANCEMENTS.md  FINAL_TEST_REPORT.md  FREEZE_PROCEDURES.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_TESTING.md  README.md  RESERVE_HEALTH_IMPLEMENTATION.md  SOROBAN_PR_DESCRIPTION.md  SYNC_UPSTREAM.md  Scarb.toml  TESTING_CHECKLIST.md  TESTING_SUMMARY.md  TEST_COVERAGE_REPORT.md  TRIGGER_SYSTEM.md  inheritance.cairo  inheritance_interface.cairo  lib.cairo  package-lock.json  package.json  pr_body.md  rustfmt.toml  tests.cairo  trigger_types.cairo  verify_implementation.sh
contracts/inheritance-contract/: Cargo.toml  IMPLEMENTATION.md
contracts/inheritance-contract/src/: acknowledgment_test.rs  cross_chain.rs  cross_contract_test.rs  disputes.rs  lib.rs  message_test.rs  price_feed.rs  test.rs
contracts/inheritance-contract/test_snapshots/acknowledgment_test/: test_beneficiary_acknowledgment_flow.1.json  test_unauthorized_notify.1.json  test_verification_failed_acknowledgment.1.json
contracts/inheritance-contract/test_snapshots/cross_contract_test/: test_get_lending_contract_returns_none_when_unset.1.json  test_set_and_get_contracts.1.json  (+2 more)
contracts/inheritance-contract/testdata/: inheritance_contract.wasm
(+3104 files in other folders)
